# contacts/models/contact.js
@@ -1,9 +1,0 @@
-class Contact {
-    constructor() {}
-
-    #firstName;
-    #lastName;
-    #email;
-    #favoriteColor;
-    #birthday;
-}
